--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react-dom": "^15.3.2",
     "serve-favicon": "^2.0.1",
     "url-loader": "^0.5.9",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "chai": "^4.2.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^12.0.0",
     "eslint-config-loopback": "^4.0.0",
